--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,8 @@ ignore =
   # W503 is incompatible with PEP 8
   W503
 
+exclude = __pycache__,settings.py
+
 [tool:pytest]
 norecursedirs = __pycache__
 log_cli = 1
