--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Vitalii Paprotskyi <vetalpaprotsky@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 django = "^3.1.5"
+django-bootstrap4 = "^2.3.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.4"
