--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["Vitalii Paprotskyi <vetalpaprotsky@gmail.com>"]
 python = "^3.8"
 django = "^3.1.5"
 django-bootstrap4 = "^2.3.1"
+rollbar = "^0.15.1"
+python-dotenv = "^0.15.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.4"
