--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ django = "^3.1.5"
 django-bootstrap4 = "^2.3.1"
 rollbar = "^0.15.1"
 python-dotenv = "^0.15.0"
+dj-database-url = "^0.5.0"
+gunicorn = "^20.0.4"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.4"
