--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ whitenoise = "^5.2.0"
 flake8 = "^3.8.4"
 pytest = "^6.2.1"
 pytest-cov = "^2.10.1"
+django-extensions = "^3.1.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
