--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ coverage==5.3.1
 dj-database-url==0.5.0
 Django==3.1.5
 django-bootstrap4==2.3.1
+django-extensions==3.1.0
 flake8==3.8.4
 gunicorn==20.0.4
 idna==2.10
