--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,8 @@ whitenoise = "^5.2.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.4"
-pytest = "^6.2.1"
-pytest-cov = "^2.10.1"
 django-extensions = "^3.1.0"
+Faker = "^5.6.5"
 
 [build-system]
 requires = ["poetry>=0.12"]
