--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ dj-database-url==0.5.0
 Django==3.1.5
 django-bootstrap4==2.3.1
 django-extensions==3.1.0
+Faker==5.6.5
 flake8==3.8.4
 gunicorn==20.0.4
 idna==2.10
@@ -22,6 +23,7 @@ pyflakes==2.2.0
 pyparsing==2.4.7
 pytest==6.2.1
 pytest-cov==2.10.1
+python-dateutil==2.8.1
 python-dotenv==0.15.0
 pytz==2020.5
 requests==2.25.1
@@ -29,6 +31,7 @@ rollbar==0.15.1
 six==1.15.0
 soupsieve==2.1
 sqlparse==0.4.1
+text-unidecode==1.3
 toml==0.10.2
 urllib3==1.26.2
 whitenoise==5.2.0
