add test coverage

--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -21,3 +21,9 @@ jobs:
       - name: Run linter and pytest
         run: |
           make check
+      - name: Publish code coverage
+        uses: paambaati/codeclimate-action@v2.7.3
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageCommand: poetry run coverage xml
