--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ whitenoise = "^5.2.0"
 flake8 = "^3.8.4"
 django-extensions = "^3.1.0"
 Faker = "^5.6.5"
+coverage = "^5.3.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
