rename job name in github actions

--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           pip install poetry
           make install
-      - name: Run linter and pytest
+      - name: Run linter and tests
         run: |
           make check
       - name: Publish code coverage
