--- a/setup.cfg
+++ b/setup.cfg
@@ -7,4 +7,4 @@ ignore =
   # W503 is incompatible with PEP 8
   W503
 
-exclude = __pycache__,settings.py
+exclude = __pycache__,settings.py,migrations
