add create view for tasks

--- a/task_manager/tasks/fixtures/tasks.json
+++ b/task_manager/tasks/fixtures/tasks.json
@@ -23,7 +23,7 @@
             "name": "test_task1",
             "description": "test_description1",
             "author_id": 1,
-            "assigned_user_id": 1,
+            "executor_id": 1,
             "status_id": 1
         }
     },
@@ -34,7 +34,7 @@
             "name": "test_task2",
             "description": "test_description2",
             "author_id": 1,
-            "assigned_user_id": 1,
+            "executor_id": 1,
             "status_id": 1
         }
     }
