--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dj-database-url = "^0.5.0"
 gunicorn = "^20.0.4"
 psycopg2 = "^2.8.6"
 whitenoise = "^5.2.0"
+django-filter = "^2.4.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.4"
