--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 asgiref==3.3.1
-attrs==20.3.0
 beautifulsoup4==4.9.3
 certifi==2020.12.5
 chardet==4.0.0
@@ -8,21 +7,15 @@ dj-database-url==0.5.0
 Django==3.1.5
 django-bootstrap4==2.3.1
 django-extensions==3.1.0
+django-filter==2.4.0
 Faker==5.6.5
 flake8==3.8.4
 gunicorn==20.0.4
 idna==2.10
-iniconfig==1.1.1
 mccabe==0.6.1
-packaging==20.8
-pluggy==0.13.1
 psycopg2==2.8.6
-py==1.10.0
 pycodestyle==2.6.0
 pyflakes==2.2.0
-pyparsing==2.4.7
-pytest==6.2.1
-pytest-cov==2.10.1
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 pytz==2020.5
@@ -32,6 +25,5 @@ six==1.15.0
 soupsieve==2.1
 sqlparse==0.4.1
 text-unidecode==1.3
-toml==0.10.2
 urllib3==1.26.2
 whitenoise==5.2.0
