--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,9 @@ name = "hexlet-code"
 version = "0.1.0"
 description = ""
 authors = ["Vitalii Paprotskyi <vetalpaprotsky@gmail.com>"]
+packages = [
+    { include = 'task_manager' }
+]
 
 [tool.poetry.dependencies]
 python = "^3.8"
